--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "inspirational-quotes": "^2.0.1",
     "node-fetch": "^3.3.2"
   }
 }
