--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hw4",
   "version": "1.0.0",
-  "main": "app.mjs",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
