--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "hw4",
   "version": "1.0.0",
-  "main": "api/index.mjs",
+  "main": "index.mjs",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.mjs"
   },
   "keywords": [],
   "author": "",
