--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hw4",
   "version": "1.0.0",
-  "main": "index.mjs",
+  "main": "api/index.mjs",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.mjs"
+    "start": "node api/index.mjs"
   },
   "keywords": [],
   "author": "",
